--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
+    "@astrojs/markdown-remark": "^6.3.10",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/vercel": "^9.0.2",
+    "@shikijs/core": "^3.20.0",
+    "@shikijs/types": "^3.20.0",
+    "@types/hast": "^3.0.4",
+    "@types/mdast": "^4.0.4",
+    "@unocss/preset-typography": "^66.5.10",
+    "@unocss/reset": "^66.5.10",
     "@waline/client": "^3.8.0",
-    "astro": "^5.16.3",
+    "astro": "^5.16.5",
     "astro-pure": "1.3.9",
+    "hastscript": "^9.0.1",
     "katex": "^0.16.25",
     "mdast": "^3.0.0",
     "rehype": "^13.0.2",
@@ -42,7 +50,7 @@
     "ultrahtml": "^1.6.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
-    "unocss": "^66.5.9",
+    "unocss": "^66.5.10",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -52,5 +60,8 @@
     "eslint-plugin-astro": "^1.5.0",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1"
+  },
+  "resolutions": {
+    "@astrojs/sitemap": "3.5.0"
   }
 }
