--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "astro": "^5.16.6",
     "astro-pure": "1.4.0",
     "katex": "^0.16.27",
+    "medium-zoom": "^1.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-stringify": "^10.0.1",
     "remark-math": "^6.0.0",
